--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <select class="card-currency">
           <option value="">Selecione uma moeda</option>
         </select>
-        <input type="number">
+        <input class="input" type="number">
       </div>
       <div class="exchange">
         <img src="./images/exchange.svg" alt="Exchange icon">
@@ -26,7 +26,7 @@
         <select class="card-currency">
           <option value="">Selecione uma moeda</option>
         </select>
-        <input type="number">
+        <input class="input" type="number" disabled>
       </div>
     </div>
   </div>
